@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam linetype ortho_crossover 20
skinparam linetype ortho_crossover_length 20
skinparam linetype ortho_crossover_width 20
skinparam linetype ortho_crossover_shape circle
skinparam linetype ortho_crossover_color red
skinparam linetype ortho_crossover_spacing 20
skinparam linetype ortho_crossover_margin 20

skinparam class {
    BackgroundColor white
    ArrowColor blue
    BorderColor black
    BorderThickness 2
    FontColor black
    FontSize 15
    FontStyle bold
    HeaderFontColor black
    HeaderFontSize 15 
    HeaderFontStyle bold
    HeaderBackgroundColor white
    HeaderBorderColor black
    HeaderBorderThickness 2
    HeaderFontColor black
    HeaderFontSize 15
    HeaderFontStyle bold
    HeaderPosition top 
    AttributeBackgroundColor white
    AttributeBorderColor black
    AttributeBorderThickness 2
    AttributeFontColor black
    AttributeFontSize 15
    AttributeFontStyle bold
    AttributePosition top
    Shadowing true
    RoundCorner 10
    AttributeIconSize 0 
}
left to right direction
' Entities


class Admin {
    +id
    +name
    +email
    +password
    +role
}

class User {
    +id
    +name
    +email
    +password
    +role
}

class Article {
    +id
    +title
    +content
    +userId
    +categoryId
    +tagsId
    
}

class Comment {
    +id
    +content
    +userId
    +articleId
    
}

class Tag {
    +id
    +name
}

class Category {
    +id
    +name
    +description
}

' Relationships
Admin --> "manages" User
Admin --> "manages" Article
Admin --> "manages" Category
Admin --> "manages" Tag

User --> "adds" Comment
User --> "writes" Article

Article --> "has" Tag
Article --> "belongs to" Category
Article --> "has" Comment

@enduml
